# Some-Uni-Projects

./: README.md
Assignments/: Marc Ferriggi SOR 2220 Assignment LSINCOMPLETE.docx
C++_Monopoly/: Blank.cpp  Blank.h  CMakeLists.txt  Company.cpp  Company.h  GameController.cpp  GameController.h  Hazard.cpp  Hazard.h  Ownerships.cpp  Ownerships.h  Player.cpp  Player.h  Port.cpp  Port.h  Properties.cpp  Properties.h  Tile.cpp  Tile.h  TipparkjaBXejn.cpp  TipparkjaBXejn.h  Xorti.cpp  Xorti.h  a.out  compile.sh  main  main.cpp
C_Signal/: TaskA.c  TaskC.c  TaskD.c
Graph_Search_Algorithms/: Edge.java  Node.java  NodeAStarComparator.java  NodeUCSComparator.java  runner.java
Modelling_Assignment/: Q1.py  Q2.py  Q2amB.py  Q3.py
Suffix_Tree/: run.sh
Suffix_Tree/src/: SuffixTree.java  SuffixTrie.java  TNode.java  runner.java
